<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".HomeActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_txt"
        android:textSize="30sp"
        android:textColor="@color/textColor" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="বাংলা"
            android:textSize="20sp"
            android:textColor="@color/textColor2"/>
        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="English"
            android:textSize="20sp"
            android:textColor="@color/textColor2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/aboutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_about_us"
            android:textSize="20sp"
            android:textColor="@color/textColor2"/>
        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/privacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_privacy_policy"
            android:textSize="20sp"
            android:textColor="@color/textColor2"/>
    </LinearLayout>
    <TextView
        android:id="@+id/exit"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ic_exit"
        android:textSize="30sp"
        android:textColor="@color/textColor" />

</LinearLayout>