<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/banBornomala"
        android:layout_marginTop="102dp"
        android:layout_marginStart="10dp"
        android:paddingTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:gravity="center_horizontal"
        android:onClick="bornomala"
        android:layout_width="160dp"
        android:layout_height="260dp"
        android:text="@string/bornomala_text"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/name_plate"
        android:textColor="@color/textColor"/>
    <TextView
        android:id="@+id/engBornomala"
        android:layout_marginTop="225dp"
        android:paddingStart="5dp"
        android:paddingTop="50dp"
        android:paddingEnd="0dp"
        android:gravity="center_horizontal"
        android:onClick="alphabet"
        android:layout_width="140dp"
        android:layout_height="170dp"
        android:text="@string/alphabet_text"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/nm_pt"
        android:textColor="#FFEB3B"/>
    <TextView
        android:id="@+id/arbBornomala"
        android:layout_marginTop="102dp"
        android:layout_marginStart="10dp"
        android:paddingTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:gravity="center_horizontal"
        android:onClick="arabic"
        android:layout_width="160dp"
        android:layout_height="260dp"
        android:text="@string/arabic_text"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/name_plate"
        android:textColor="@color/textColor"/>
    <TextView
        android:id="@+id/num"
        android:layout_marginTop="240dp"
        android:paddingStart="5dp"
        android:paddingTop="65dp"
        android:paddingEnd="0dp"
        android:gravity="center_horizontal"
        android:onClick="numbers"
        android:layout_width="140dp"
        android:layout_height="170dp"
        android:text="@string/numbers_text"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/nm_pt"
        android:textColor="#FFEB3B"/>
    <TextView
        android:id="@+id/unit"
        android:layout_marginTop="115dp"
        android:layout_marginStart="10dp"
        android:paddingTop="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:gravity="center_horizontal"
        android:onClick="units"
        android:layout_width="160dp"
        android:layout_height="260dp"
        android:text="@string/units_text"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/name_plate"
        android:textColor="@color/textColor"/>

</LinearLayout>