<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pp_bg"
    tools:context=".PrivacyPolicyActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Privacy Policy"
            android:textColor="#FFFFFF"
            android:textAlignment="center"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part1"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part2"/>

        <!--<com.google.android.gms.ads.AdView-->
            <!--xmlns:ads="http://schemas.android.com/apk/res-auto"-->
            <!--android:id="@+id/adViewP1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--ads:adSize="BANNER"-->
            <!--android:layout_gravity="center"-->
            <!--ads:adUnitId="ca-app-pub-5910423341335020/2128097711">-->
        <!--</com.google.android.gms.ads.AdView>-->

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Information Collection And Use"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part3"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="Types of Data Collected"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="Personal Data"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part4"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• Email address"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• First name and last name"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• Phone number"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• Address, State, Province, ZIP/Postal code, City"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• Cookies and Usage Data"
            android:textColor="#FFFFFF"/>

        <!--<com.google.android.gms.ads.AdView-->
            <!--xmlns:ads="http://schemas.android.com/apk/res-auto"-->
            <!--android:id="@+id/adViewP2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--ads:adSize="BANNER"-->
            <!--android:layout_gravity="center"-->
            <!--ads:adUnitId="ca-app-pub-5910423341335020/2128097711">-->
        <!--</com.google.android.gms.ads.AdView>-->

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="Usage Data"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part5"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="Tracking and Cookies Data"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part6"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• Session Cookies. We use Session Cookies to operate our Service."
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• Preference Cookies. We use Preference Cookies to remember your preferences and various settings."
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• Security Cookies. We use Security Cookies for security purposes."
            android:textColor="#FFFFFF"/>

        <!--<com.google.android.gms.ads.AdView-->
            <!--xmlns:ads="http://schemas.android.com/apk/res-auto"-->
            <!--android:id="@+id/adViewP3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--ads:adSize="BANNER"-->
            <!--android:layout_gravity="center"-->
            <!--ads:adUnitId="ca-app-pub-5910423341335020/2128097711">-->
        <!--</com.google.android.gms.ads.AdView>-->

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Use of Data"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part7"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• To provide and maintain the Service"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• To notify you about changes to our Service"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• To allow you to participate in interactive features of our Service when you choose to do so"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• To provide customer care and support"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• To provide analysis or valuable information so that we can improve the Service"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• To monitor the usage of the Service"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• To detect, prevent and address technical issues"
            android:textColor="#FFFFFF"/>

        <!--<com.google.android.gms.ads.AdView-->
            <!--xmlns:ads="http://schemas.android.com/apk/res-auto"-->
            <!--android:id="@+id/adViewP4"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--ads:adSize="BANNER"-->
            <!--android:layout_gravity="center"-->
            <!--ads:adUnitId="ca-app-pub-5910423341335020/2128097711">-->
        <!--</com.google.android.gms.ads.AdView>-->


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Transfer Of Data"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part8"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Disclosure Of Data"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="Legal Requirements"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part9"/>


        <!--<com.google.android.gms.ads.AdView-->
            <!--xmlns:ads="http://schemas.android.com/apk/res-auto"-->
            <!--android:id="@+id/adViewP5"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--ads:adSize="BANNER"-->
            <!--android:layout_gravity="center"-->
            <!--ads:adUnitId="ca-app-pub-5910423341335020/2128097711">-->
        <!--</com.google.android.gms.ads.AdView>-->


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• To comply with a legal obligation"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• To protect and defend the rights or property of KP Software Solutions"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• To prevent or investigate possible wrongdoing in connection with the Service"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• To protect the personal safety of users of the Service or the public"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• To protect against legal liability"
            android:textColor="#FFFFFF"/>

        <!--<com.google.android.gms.ads.AdView-->
            <!--xmlns:ads="http://schemas.android.com/apk/res-auto"-->
            <!--android:id="@+id/adViewP6"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--ads:adSize="BANNER"-->
            <!--android:layout_gravity="center"-->
            <!--ads:adUnitId="ca-app-pub-5910423341335020/2128097711">-->
        <!--</com.google.android.gms.ads.AdView>-->


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Security Of Data"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part10"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Service Providers"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part11"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Links To Other Sites"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part12"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Children\'s Privacy"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part13"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Changes To This Privacy Policy"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part14"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="Contact Us"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/pp_part15"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• By email: kpsoftwaresolutions09@gmail.com"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="• By phone number: +880 1837110529"
            android:textColor="#FFFFFF"/>

        <!--<com.google.android.gms.ads.AdView-->
            <!--xmlns:ads="http://schemas.android.com/apk/res-auto"-->
            <!--android:id="@+id/adViewP7"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--ads:adSize="BANNER"-->
            <!--android:layout_gravity="center"-->
            <!--ads:adUnitId="ca-app-pub-5910423341335020/2128097711">-->
        <!--</com.google.android.gms.ads.AdView>-->

    </LinearLayout>
</ScrollView>